API pour les onglets

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,7 @@
 @import 'variables';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// jQuery-ui
+@import '~jquery-ui/themes/base/all.css';
 //Custom
 @import "tabs";
