--- a/resources/sass/header.scss
+++ b/resources/sass/header.scss
@@ -7,9 +7,9 @@ header {
   }
 
   & h1 {
-    font-size: 1.5rem;
-    @include media-breakpoint-up(sm) {
-      font-size: 3rem;
+    font-size: 3rem;
+    @include media-breakpoint-down(sm) {
+      font-size: 1.5rem;
     }
 
     & a {
